Changes 2011-12-05
------------------
Issue #1333554 by hiddentao, toleiollo: Patch to ensure correct language representatio of body field is used.
Issue #1341900 by Jorrit, hiddentao: Patched bug where fallback image was being used instead of node image.
Issue #1316264 by hiddentao, vinmassaro: Patched leading slash on image URL issue for both versions.
by hiddentao: Added compatibility layer to hide Drupal version differences.
by hiddentao: Added Drupal version-specific hook include files.
by hiddentao: Better test error reporting.


Changes 2011-11-25
------------------
Issue #1151668 by Jorrit: Fixed error in schema configuration.
Issue #1341926 by hiddentao, Jorrit: Fixed failing tests using patch (http://drupal.org/node/1341926#comment-5245588).
by hiddentao: Added changelog.
by hiddentao: Fixed minor bug in OpenGraphMeta singleton factory method.