@@ -6,11 +6,12 @@ core = 7.x
 files[] = opengraph_meta.admin.inc
 files[] = opengraph_meta.common.inc
 files[] = tests/Basic.test
+files[] = tests/Hooks.test
 
 configure = admin/config/content/opengraph_meta
-; Information added by drupal.org packaging script on 2011-12-05
-version = "7.x-1.2"
+; Information added by drupal.org packaging script on 2012-05-19
+version = "7.x-1.3"
 core = "7.x"
 project = "opengraph_meta"
-datestamp = "1323105645"
+datestamp = "1337448671"
 
