@@ -3,7 +3,8 @@
 require_once('opengraph_meta.common.inc');
 
 
-define('OPENGRAPH_META_MENU_ADMIN','admin/config/content/opengraph_meta');
+define('OPENGRAPH_META_MENU_ADMIN_D7','admin/config/content/opengraph_meta');
+define('OPENGRAPH_META_MENU_ADMIN_D6','admin/settings/opengraph_meta');
 
 
 
@@ -13,7 +14,9 @@ define('OPENGRAPH_META_MENU_ADMIN','admin/config/content/opengraph_meta');
 function opengraph_meta_menu() {
   $admin_access = array(OPENGRAPH_META_PERM_ADMIN);
 
-  $items[OPENGRAPH_META_MENU_ADMIN] = array(
+  $menupath = (OPENGRAPH_META_DRUPAL_VERSION == 6) ? OPENGRAPH_META_MENU_ADMIN_D6 : OPENGRAPH_META_MENU_ADMIN_D7;
+
+  $items[$menupath] = array(
     'title' => 'Open Graph meta tags',
     'page callback' => 'drupal_get_form',
     'page arguments' => array('opengraph_meta_settings_form'),
@@ -24,8 +27,8 @@ function opengraph_meta_menu() {
   );
 
   if (6 == OPENGRAPH_META_DRUPAL_VERSION) {
-    $items[OPENGRAPH_META_MENU_ADMIN]['type'] = MENU_NORMAL_ITEM;
-    $items[rtrim(OPENGRAPH_META_MENU_ADMIN,'/').'/settings'] = array(
+    $items[$menupath]['type'] = MENU_NORMAL_ITEM;
+    $items[rtrim($menupath,'/').'/settings'] = array(
       'title' => 'Settings',
       'access arguments' => $admin_access,
       'type' => MENU_DEFAULT_LOCAL_TASK,
@@ -118,7 +121,7 @@ function opengraph_meta_form_alter(&$form, $form_state, $form_id) {
         '#default_value' => !empty($node->opengraph_meta) ? $node->opengraph_meta[OpenGraphMeta::IMAGE] : '',
         '#description' => t('The thumbnail image that will get shown in e.g. a Facebook preview. If left unset then then the first available image will be used. If none available then the global fallback image will be used.'),
         '#options' => $image_selector_options,
-        '#attributes' => array('class' => 'opengraph-thumbs-wrapper clearfix'),
+        '#attributes' => array('class' => array('opengraph-thumbs-wrapper','clearfix')),
       );
     }
   }
@@ -140,11 +143,16 @@ function _opengraph_meta_location_form_fields($node = NULL) {
   $defaults = OpenGraphMeta::instance()->get_og_optional_tag_defaults($node);
 
   foreach ($fields as $f => $i) {
+    $default_value = '';
+    if (!empty($node->opengraph_meta) && !empty($node->opengraph_meta[$f])) {
+      $default_value = $node->opengraph_meta[$f];
+    }
+
     $ret[$f] = array(
       '#title' => t($i[0]),
       '#type' => 'textfield',
       '#maxlength' => 255,
-      '#default_value' => !empty($node->opengraph_meta) ? $node->opengraph_meta[$f] : '',
+      '#default_value' =>  $default_value,
       '#description' => t($i[1]),
     );
     // global fallback value?
@@ -167,11 +175,16 @@ function _opengraph_meta_contact_form_fields($node = NULL) {
   $defaults = OpenGraphMeta::instance()->get_og_optional_tag_defaults($node);
 
   foreach ($fields as $f => $i) {
+    $default_value = '';
+    if (!empty($node->opengraph_meta) && !empty($node->opengraph_meta[$f])) {
+      $default_value = $node->opengraph_meta[$f];
+    }
+
     $ret[$f] = array(
       '#title' => t($i[0]),
       '#type' => 'textfield',
       '#maxlength' => 255,
-      '#default_value' => !empty($node->opengraph_meta) ? $node->opengraph_meta[$f] : '',
+      '#default_value' => $default_value,
       '#description' => t($i[1]),
     );
     // global fallback value?
