@@ -1,20 +1,12 @@
 <?php
 // $Id
-
-module_load_include('inc','opengraph_meta','opengraph_meta.common');
+require_once(dirname(__FILE__) . '/TestBase.inc');
 
 
 /**
  * Tests for Open Graph meta tags.
  */
-class OGMTBasicTest extends DrupalTestCase {
-
-  private $ogm = NULL;
-  private $ogm_objects_backup = NULL;
-
-  private $ogm_data = NULL;
-  private $ogm_settings = NULL;
-  private $ogm_render = NULL;
+class OGMTBasicTest extends OGMTTestBase {
 
   public static function getInfo() {
     return array(
@@ -22,21 +14,6 @@ class OGMTBasicTest extends DrupalTestCase {
       'description' => t('Test basic functionality.'),
       'group' => t('Open Graph meta tags'),
     );
-  }
-
-  function setUp() {
-    $this->ogm = OpenGraphMeta::instance();
-    $this->ogm_data = new OGMTestData();
-    $this->ogm_settings = new OGMTestSettings();
-    $this->ogm_render = new OGMTestRender();
-    $this->ogm_objects_backup = $this->ogm->__get_objects();
-    $this->ogm->__set_objects($this->ogm_data, $this->ogm_settings, $this->ogm_render);
-    $this->_reset_rendered_tags();
-  }
-
-  function tearDown() {
-    $instance = OpenGraphMeta::instance();
-    call_user_func_array(array(&$instance, '__set_objects'), $this->ogm_objects_backup);
   }
 
   function testExtractImagesFromNode() {
@@ -170,7 +147,7 @@ class OGMTBasicTest extends DrupalTestCase {
     $this->ogm->render_data($node, $this->ogm->load_node_data($node));
     $this->_check_rendered_meta_tags(array(
       'og:'.OpenGraphMeta::TITLE => $node->title,
-      'og:'.OpenGraphMeta::DESCRIPTION => mb_substr(strip_tags(OpenGraphMetaDrupalLayer::get_node_body($node)),0,200),
+      'og:'.OpenGraphMeta::DESCRIPTION => drupal_substr(strip_tags(OpenGraphMetaDrupalLayer::get_node_body($node)),0,200),
       'og:'.OpenGraphMeta::SITE_NAME => 'Drupal',
       'og:'.OpenGraphMeta::URL => url('node/1', array('absolute' => TRUE)),
     ),__FUNCTION__);
@@ -249,7 +226,7 @@ class OGMTBasicTest extends DrupalTestCase {
     $this->ogm->render_data($node, $this->ogm->load_node_data($node));
     $this->_check_rendered_meta_tags(array(
       'og:'.OpenGraphMeta::TITLE => $node->title,
-      'og:'.OpenGraphMeta::DESCRIPTION => mb_substr(strip_tags(OpenGraphMetaDrupalLayer::get_node_body($node)),0,200),
+      'og:'.OpenGraphMeta::DESCRIPTION => drupal_substr(strip_tags(OpenGraphMetaDrupalLayer::get_node_body($node)),0,200),
       'og:'.OpenGraphMeta::SITE_NAME => 'Drupal',
       'og:'.OpenGraphMeta::IMAGE => url('default.jpg', array('absolute' => TRUE)),
       'og:'.OpenGraphMeta::URL => url('node/1', array('absolute' => TRUE)),
@@ -266,7 +243,7 @@ class OGMTBasicTest extends DrupalTestCase {
 
     $this->_check_rendered_meta_tags(array(
       'og:'.OpenGraphMeta::TITLE => $node->title,
-      'og:'.OpenGraphMeta::DESCRIPTION => mb_substr(strip_tags(OpenGraphMetaDrupalLayer::get_node_body($node)),0,200),
+      'og:'.OpenGraphMeta::DESCRIPTION => drupal_substr(strip_tags(OpenGraphMetaDrupalLayer::get_node_body($node)),0,200),
       'og:'.OpenGraphMeta::SITE_NAME => 'Drupal',
       'og:'.OpenGraphMeta::IMAGE => url($imgpath, array('absolute' => TRUE)),
       'og:'.OpenGraphMeta::URL => url('node/1', array('absolute' => TRUE)),
@@ -274,98 +251,4 @@ class OGMTBasicTest extends DrupalTestCase {
   }
 
 
-
-  private function _check_saved_tags_for_node($nid, array $expected, $msg) {
-    $ret = $this->ogm_data->load_tags($nid);
-    $this->assertEqual($ret->nid,$nid, $msg);
-    foreach ($expected as $key => $val) {
-      $this->assertEqual($ret->$key, $val, $msg);
-    }
-  }
-
-
-
-  private function _build_test_node($nid) {
-    $node = new stdClass();
-    $node->nid = $nid;
-    $node->title = 'test title';
-    $node->type = 'type1';
-    $this->_set_node_body($node, str_pad('',255,'ab'));
-    return $node;
-  }
-
-
-  private function _set_node_body(&$node, $body) {
-    switch (OPENGRAPH_META_DRUPAL_VERSION) {
-      case 6:
-        $node->body = $body;
-        break;
-      default:
-        $node->body = array(LANGUAGE_NONE => array('0' => array('value' => $body)));
-    }
-  }
-
-
-  private function _create_img_field($mime, $path) {
-    switch (OPENGRAPH_META_DRUPAL_VERSION) {
-      case 6:
-        return array('filemime' => $mime, 'filepath' => $path);
-        break;
-      default:
-        return array('filemime' => $mime, 'uri' => $path);
-    }
-  }
-
-
-
-  private function _check_rendered_meta_tags(array $expected, $msg) {
-    $diff = array_diff_assoc($expected, $this->ogm_render->meta) + array_diff_assoc($this->ogm_render->meta, $expected);
-
-    $str = 'Difference: ';
-    foreach ($diff as $k => $v) {
-      $str .= $k .' => '. $v.', ';
-    }
-
-    $result = empty($diff);
-
-    $this->assertTrue($result, $result ? NULL : "$msg: $str");
-  }
-
-
-  private function _reset_rendered_tags() {
-    $this->ogm->__reset_tags_already_output();
-    $this->ogm_render->meta = array();
-  }
-}
-
-
-class OGMTestSettings implements OGMSettings {
-  public $vars = array();
-  public function get($name, $default) {
-    return isset($this->vars[$name]) ? $this->vars[$name] : $default;
-  }
-  public function set($name, $value) {
-    $this->vars[$name] = $value;
-  }
-}
-
-class OGMTestRender implements OGMRender {
-  public $meta = array();
-  public function add_meta($name, $content) {
-    $this->meta[$name] = $content;
-  }
-}
-
-class OGMTestData implements OGMData {
-  public $tags = array();
-  public function load_tags($nid) {
-    return (isset($this->tags[$nid])) ? $this->tags[$nid] : FALSE;
-  }
-  public function delete_tags($nid) {
-    if (isset($this->tags[$nid]))
-      unset($this->tags[$nid]);
-  }
-  public function update_tags($field_data_including_nid, $primary_key = array()) {
-    $this->tags[$field_data_including_nid->nid] = $field_data_including_nid;
-  }
 }
